--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AFZone</title>
-        <link rel="stylesheet" href="cit hw 2.css">
+        <link rel="stylesheet" href="./main/cit hw 2.css">
     </head>
     <body>
         <div class="mainfloor">
@@ -30,22 +30,22 @@
     <br><br><br><br><br><br><br><br>
         <div class="posters">
             <div class="gokupnb">
-                <a target="_blank" href="https://aniwatchtv.to/dragon-ball-z-325?ref=search"><img id="goku" src="../img/goku.png" alt="goku"></a>
+                <a target="_blank" href="https://aniwatchtv.to/dragon-ball-z-325?ref=search"><img id="goku" src="./img/goku.png" alt="goku"></a>
 
                 <a target="_blank" href="https://aniwatchtv.to/dragon-ball-z-325?ref=search"><button id="dz">Dragon Ball Z</button></a>
             </div>
             <div class="demonpnb">
-                <a target="_blank" href="https://aniwatchtv.to/demon-slayer-kimetsu-no-yaiba-47?ref=search"><img id="demon" src="../img/Demon Slayer.png" alt="demon slayer"></a>
+                <a target="_blank" href="https://aniwatchtv.to/demon-slayer-kimetsu-no-yaiba-47?ref=search"><img id="demon" src="./img/Demon Slayer.png" alt="demon slayer"></a>
 
                 <a target="_blank" href="https://aniwatchtv.to/demon-slayer-kimetsu-no-yaiba-47?ref=search"><button id="ds">Demon Slayer</button></a>
             </div>
             <div class="narutopnb">
-                <a target="_blank" href="https://aniwatchtv.to/naruto-677?ref=search"> <img id="naruto" src="../img/naruto.png" alt="naruto"></a>
+                <a target="_blank" href="https://aniwatchtv.to/naruto-677?ref=search"> <img id="naruto" src="./img/naruto.png" alt="naruto"></a>
 
                 <a target="_blank" href="https://aniwatchtv.to/naruto-677?ref=search"><button id="nr">Naruto</button></a>
             </div>
             <div class="pokemonpnb">
-                <a target="_blank" href="https://aniwatchtv.to/pokemon-2097?ref=search"><img id="pokemon" src="../img/pokemon.png" alt="pokemon"></a>
+                <a target="_blank" href="https://aniwatchtv.to/pokemon-2097?ref=search"><img id="pokemon" src="./img/pokemon.png" alt="pokemon"></a>
 
                 <a target="_blank" href="https://aniwatchtv.to/pokemon-2097?ref=search"><button id="pk">Pokemon</button></a>
             </div>
