--- a/index.html
+++ b/index.html
@@ -7,27 +7,32 @@
         <link rel="stylesheet" href="main/cit hw 2.css">
     </head>
     <body>
-        <div class="mainfloor">
-            <h1 class="anime">Anime</h1>
-            <h1 class="fan">Fan</h1>
-            <h1 class="zone">Zone</h1>
-        </div>
-        <div class="main">
-            <div class="navigator">
-                <div class="logo">
-                    <h1>AFZone</h1>
-                </div>
-                <div class="options">
-                    <a class="options1" href="cit hw 2.html">Home</a>
-                    <a class="options2" href="#">About</a>
-                    <a class="options3" href="#">Contact</a>
-                    <a class="options4" href="#">Help</a>
+        <nav class="container">
+            <div class="main">
+                <div class="navigator">
+                    <div class="logo">
+                        <h1>AFZone</h1>
+                    </div>
+                    <div class="options">
+                        <a class="options1" href="cit hw 2.html">Home</a>
+                        <a class="options2" href="#">About</a>
+                        <a class="options3" href="#">Contact</a>
+                        <a class="options4" href="#">Help</a>
+                    </div>
                 </div>
             </div>
+        </nav>
+        <div class="container1">
+            <div class="mainfloor">
+                <h1 class="anime">Anime</h1>
+                <h1 class="fan">Fan</h1>
+                <h1 class="zone">Zone</h1>
+            </div>
         </div>
-        <div><h1 class="scroll"> Scroll Down to Watch Anime</h1></div>
-        <div class="down"><h1>&#8595</h1></div>
+        <div class="container3"><h1 class="scroll"> Scroll Down to Watch Anime</h1></div>
+        <div class="container4"><h1 class="down">&#8595</h1></div>
     <br><br><br><br><br><br><br><br>
+    <div class="container2">
         <div class="posters">
             <div class="gokupnb">
                 <a target="_blank" href="https://aniwatchtv.to/dragon-ball-z-325?ref=search"><img id="goku" src="./img/goku.png" alt="goku"></a>
@@ -50,5 +55,6 @@
                 <a target="_blank" href="https://aniwatchtv.to/pokemon-2097?ref=search"><button id="pk">Pokemon</button></a>
             </div>
         </div>
+    </div>
 </body>
 </html>
