Update Home link to use a placeholder href

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <h1>AFZone</h1>
                     </div>
                     <div class="options">
-                        <a class="options1" href="cit hw 2.html">Home</a>
+                        <a class="options1" href="#">Home</a>
                         <a class="options2" href="#">About</a>
                         <a class="options3" href="#">Contact</a>
                         <a class="options4" href="#">Help</a>
