--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="main">
                 <div class="navigator">
                     <div class="logo">
-                        <h1>AFZone</h1>
+                        <a href="index.html"><img src="img/AFone.png" alt=""></a>
                     </div>
                     <div class="options">
                         <a class="options1" href="#">Home</a>
