inserted an icon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="main">
                 <div class="navigator">
                     <div class="logo">
-                        <a href="index.html"><img src="img/AFone.png" alt=""></a>
+                        <a href="index.html"><img src="img/AFZone.png" alt=""></a>
                     </div>
                     <div class="options">
                         <a class="options1" href="#">Home</a>
@@ -55,6 +55,8 @@
                 <a target="_blank" href="https://aniwatchtv.to/pokemon-2097?ref=search"><button id="pk">Pokemon</button></a>
             </div>
         </div>
+    </div>
+    <div class="reload"><a href="index.html"><img src="img/reload.png" alt=""></a>
     </div>
 </body>
 </html>
