--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div>
-    <div class="reload"><a href="index.html"><img src="img/reload.png" alt=""></a>
+    <div class="reload"><a href="index.html"><img src="img/reload.png" alt="reload"></a>
     </div>
 </body>
 </html>
